# AeroEngine

./: .gitignore  CMakeLists.txt  Readme.md
.github/workflows/: build-windows.yml
src/: loginwidget.cpp  loginwidget.h  main.cpp
windows_app/: .gitignore  README.md  README_QUICK.md  build.sh
windows_app/src/: loginwidget.cpp  loginwidget.h  main.cpp
